Changes to notebook from git backup

--- a/notebooks/preprocessing_ens_GEFS.ipynb
+++ b/notebooks/preprocessing_ens_GEFS.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,43 +21,47 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "# import cartopy.crs as ccrs  # for plotting map\n",
-    "# import cartopy\n",
     "import matplotlib as mpl\n",
     "\n",
-    "from functions import *"
+    "from functions import timecheck, trainvaltest, resampling\n",
+    "from functions import transform_train, transform_val_test\n",
+    "from functions import inverse_val_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = 'C:\\\\Users\\\\bobby\\\\Desktop\\\\.vscode\\\\1 UROP Research\\\\UROP v2\\\\raw_preprocessing\\\\GEFS\\\\'  # please change this to your own path\n",
+    "PATH = '../Data/raw_data/'  # please change this to your own path\n",
     "\n",
-    "# ensemble variables \n",
-    "apcp_p01 = xr.open_dataset(PATH+'GEFSv12-Reforecast_apcp_p01.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
-    "apcp_p02 = xr.open_dataset(PATH+'GEFSv12-Reforecast_apcp_p02.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
-    "apcp_p03 = xr.open_dataset(PATH+'GEFSv12-Reforecast_apcp_p03.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
-    "apcp_p04 = xr.open_dataset(PATH+'GEFSv12-Reforecast_apcp_p04.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
-    "apcp_c00 = xr.open_dataset(PATH+'GEFSv12-Reforecast_apcp_c00.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
+    "# ensemble variables\n",
+    "# -> 5 variables, 5 ensemble members, 35 years, 365 days, 3 hours\n",
+    "# -> importing data from 1985-01-01 to 2019-12-31\n",
+    "# importing apcp data\n",
+    "apcp_p01 = xr.open_dataset(PATH+'GEFSv12-Reforecast_apcp_p01.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
+    "apcp_p02 = xr.open_dataset(PATH+'GEFSv12-Reforecast_apcp_p02.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
+    "apcp_p03 = xr.open_dataset(PATH+'GEFSv12-Reforecast_apcp_p03.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
+    "apcp_p04 = xr.open_dataset(PATH+'GEFSv12-Reforecast_apcp_p04.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
+    "apcp_c00 = xr.open_dataset(PATH+'GEFSv12-Reforecast_apcp_c00.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
     "\n",
-    "pwat_p01 = xr.open_dataset(PATH+'GEFSv12-Reforecast_pwat_p01.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
-    "pwat_p02 = xr.open_dataset(PATH+'GEFSv12-Reforecast_pwat_p02.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
-    "pwat_p03 = xr.open_dataset(PATH+'GEFSv12-Reforecast_pwat_p03.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
-    "pwat_p04 = xr.open_dataset(PATH+'GEFSv12-Reforecast_pwat_p04.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
-    "pwat_c00 = xr.open_dataset(PATH+'GEFSv12-Reforecast_pwat_c00.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
+    "# importing pwat data\n",
+    "pwat_p01 = xr.open_dataset(PATH+'GEFSv12-Reforecast_pwat_p01.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
+    "pwat_p02 = xr.open_dataset(PATH+'GEFSv12-Reforecast_pwat_p02.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
+    "pwat_p03 = xr.open_dataset(PATH+'GEFSv12-Reforecast_pwat_p03.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
+    "pwat_p04 = xr.open_dataset(PATH+'GEFSv12-Reforecast_pwat_p04.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
+    "pwat_c00 = xr.open_dataset(PATH+'GEFSv12-Reforecast_pwat_c00.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
     "\n",
-    "# single variables\n",
-    "cape_c00 = xr.open_dataset(PATH+'GEFSv12-Reforecast_cape_c00.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
-    "t2m_c00 = xr.open_dataset(PATH+'GEFSv12-Reforecast_tmp2m_c00.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75'))\n",
-    "cin_c00 = xr.open_dataset(PATH+'GEFSv12-Reforecast_cin_c00.nc').sel(longitude=slice('102.5', '105.00'), latitude=('2.5','2.25','2','1.75','1.5','1.25','1','0.75')) # have duplicates"
+    "# importing cape data\n",
+    "cape_c00 = xr.open_dataset(PATH+'GEFSv12-Reforecast_cape_c00.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
+    "t2m_c00 = xr.open_dataset(PATH+'GEFSv12-Reforecast_tmp2m_c00.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75))\n",
+    "cin_c00 = xr.open_dataset(PATH+'GEFSv12-Reforecast_cin_c00.nc').sel(longitude=slice(102.5, 105.00), latitude=slice(2.5,0.75)) # have duplicates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,29 +87,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# selecting only unique values for apcp_p01, p02, p03, p04\n",
     "pwat_p01 = pwat_p01.sel(time=~pwat_p01.get_index(\"time\").duplicated())\n",
     "pwat_p02 = pwat_p02.sel(time=~pwat_p02.get_index(\"time\").duplicated())\n",
     "pwat_p03 = pwat_p03.sel(time=~pwat_p03.get_index(\"time\").duplicated())\n",
     "pwat_p04 = pwat_p04.sel(time=~pwat_p04.get_index(\"time\").duplicated())\n",
     "\n",
+    "# selecting only unique values for cin_c00\n",
     "cin_c00 = cin_c00.sel(time=~cin_c00.get_index(\"time\").duplicated())\n",
     "\n",
+    "# returns the training, validation and test data sets from the APCP data\n",
     "apcp_train_p01, apcp_val_p01, apcp_test_p01 = trainvaltest(apcp_p01)\n",
     "apcp_train_p02, apcp_val_p02, apcp_test_p02 = trainvaltest(apcp_p02)\n",
     "apcp_train_p03, apcp_val_p03, apcp_test_p03 = trainvaltest(apcp_p03)\n",
     "apcp_train_p04, apcp_val_p04, apcp_test_p04 = trainvaltest(apcp_p04)\n",
     "apcp_train_c00, apcp_val_c00, apcp_test_c00 = trainvaltest(apcp_c00)\n",
     "\n",
+    "# returns the training, validation and test data sets from the PWAT data\n",
     "pwat_train_p01, pwat_val_p01, pwat_test_p01 = trainvaltest(pwat_p01)\n",
     "pwat_train_p02, pwat_val_p02, pwat_test_p02 = trainvaltest(pwat_p02)\n",
     "pwat_train_p03, pwat_val_p03, pwat_test_p03 = trainvaltest(pwat_p03)\n",
     "pwat_train_p04, pwat_val_p04, pwat_test_p04 = trainvaltest(pwat_p04)\n",
     "pwat_train_c00, pwat_val_c00, pwat_test_c00 = trainvaltest(pwat_c00)\n",
     "\n",
+    "# returns the training, validation and test data sets from the single variables\n",
     "cape_train_c00, cape_val_c00, cape_test_c00 = trainvaltest(cape_c00)\n",
     "t2m_train_c00, t2m_val_c00, t2m_test_c00 = trainvaltest(t2m_c00)\n",
     "cin_train_c00, cin_val_c00, cin_test_c00 = trainvaltest(cin_c00)"
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,26 +167,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 4min to run this\n",
-    "apcp_train_p01 = resampling(apcp_train_p01, 'apcp') \n",
+    "# run this to resample the data to 6-hourly data for apcp\n",
+    "# -> Data transformation stage\n",
+    "apcp_train_p01 = resampling(apcp_train_p01, 'apcp')\n",
     "apcp_train_p02 = resampling(apcp_train_p02, 'apcp')\n",
     "apcp_train_p03 = resampling(apcp_train_p03, 'apcp')\n",
     "apcp_train_p04 = resampling(apcp_train_p04, 'apcp')\n",
     "apcp_train_c00 = resampling(apcp_train_c00, 'apcp')\n",
     "\n",
+    "# run this to resample the data to 6-hourly data for pwat\n",
+    "# -> Data transformation stage\n",
     "pwat_train_p01 = resampling(pwat_train_p01, 'pwat')\n",
     "pwat_train_p02 = resampling(pwat_train_p02, 'pwat')\n",
     "pwat_train_p03 = resampling(pwat_train_p03, 'pwat')\n",
     "pwat_train_p04 = resampling(pwat_train_p04, 'pwat')\n",
     "pwat_train_c00 = resampling(pwat_train_c00, 'pwat')\n",
     "\n",
+    "# run this to resample the data to 6-hourly data for cape, t2m, cin\n",
+    "# -> Data transformation stage\n",
     "cape_train_c00 = resampling(cape_train_c00, 'cape')\n",
     "t2m_train_c00 = resampling(t2m_train_c00, 't2m')\n",
-    "cin_train_c00 = resampling(cin_train_c00, 'cin') \n",
+    "cin_train_c00 = resampling(cin_train_c00, 'cin')\n",
+    "\n",
     "# an area with a high convection inhibition number (CIN)\n",
     "# is considered stable and has very little likelihood of developing a thunderstorm"
    ]
@@ -192,10 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# MinMax and log transform the data\n",
     "scaler_train_apcp_c00, apcp_train_c00 = transform_train(apcp_train_c00, 'apcp')\n",
     "scaler_train_apcp_p01, apcp_train_p01 = transform_train(apcp_train_p01, 'apcp')\n",
     "scaler_train_apcp_p02, apcp_train_p02 = transform_train(apcp_train_p02, 'apcp')\n",
@@ -209,17 +226,18 @@
     "scaler_train_pwat_p04, pwat_train_p04 = transform_train(pwat_train_p04, 'pwat')\n",
     "\n",
     "scaler_train_t2m_c00, t2m_train_c00 = transform_train(t2m_train_c00, 't2m')\n",
-    "scaler_train_cape_c00, cape_train_c00 = transform_train(cape_train_c00, 'cape') \n",
-    "scaler_train_cin_c00, cin_train_c00 = transform_train(cin_train_c00, 'cin') # a lot of close to 1 value"
+    "scaler_train_cape_c00, cape_train_c00 = transform_train(cape_train_c00, 'cape')\n",
+    "scaler_train_cin_c00, cin_train_c00 = transform_train(cin_train_c00, 'cin')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# apcp val\n",
+    "# test data is transformed using the scaler from the training data\n",
     "apcp_val_c00 = transform_val_test(apcp_val_c00.tp, scaler_train_apcp_c00, is_prec=True)\n",
     "apcp_val_p01 = transform_val_test(apcp_val_p01.tp, scaler_train_apcp_p01, is_prec=True)\n",
     "apcp_val_p02 = transform_val_test(apcp_val_p02.tp, scaler_train_apcp_p02, is_prec=True)\n",
@@ -266,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,36 +315,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lst_train_ensemble = [apcp_train_p01, apcp_train_p02, apcp_train_p03, apcp_train_p04, apcp_train_c00,\n",
-    "                  pwat_train_p01, pwat_train_p02, pwat_train_p03, pwat_train_p04, pwat_train_c00,\n",
-    "                  cape_train_c00, t2m_train_c00, cin_train_c00]\n",
-    "                  \n",
-    "X_train_ensemble = np.stack((lst_train_ensemble), axis = -1) # stacking 13 variables into 1 single 4D array\n",
+    "lst_train_ensemble = [\n",
+    "    apcp_train_p01,\n",
+    "    apcp_train_p02,\n",
+    "    apcp_train_p03,\n",
+    "    apcp_train_p04,\n",
+    "    apcp_train_c00,\n",
+    "    pwat_train_p01,\n",
+    "    pwat_train_p02,\n",
+    "    pwat_train_p03,\n",
+    "    pwat_train_p04,\n",
+    "    pwat_train_c00,\n",
+    "    cape_train_c00,\n",
+    "    t2m_train_c00,\n",
+    "    cin_train_c00\n",
+    "    ]\n",
     "\n",
-    "lst_val_ensemble = [apcp_val_p01, apcp_val_p02, apcp_val_p03, apcp_val_p04, apcp_val_c00,\n",
-    "                  pwat_val_p01, pwat_val_p02, pwat_val_p03, pwat_val_p04, pwat_val_c00,\n",
-    "                  cape_val_c00, t2m_val_c00, cin_val_c00]\n",
-    "                  \n",
-    "X_val_ensemble = np.stack((lst_val_ensemble), axis = -1) # stacking 13 variables into 1 single 4D array\n",
+    " # we then stack 13 variables into 1 single 4D array\n",
+    "X_train_ensemble = np.stack((lst_train_ensemble), axis = -1)\n",
     "\n",
-    "lst_test_ensemble = [apcp_test_p01, apcp_test_p02, apcp_test_p03, apcp_test_p04, apcp_test_c00,\n",
-    "                  pwat_test_p01, pwat_test_p02, pwat_test_p03, pwat_test_p04, pwat_test_c00,\n",
-    "                  cape_test_c00, t2m_test_c00, cin_test_c00]\n",
-    "                  \n",
-    "X_test_ensemble = np.stack((lst_test_ensemble), axis = -1) # stacking 13 variables into 1 single 4D array"
+    "lst_val_ensemble = [\n",
+    "    apcp_val_p01,\n",
+    "    apcp_val_p02,\n",
+    "    apcp_val_p03,\n",
+    "    apcp_val_p04,\n",
+    "    apcp_val_c00,\n",
+    "    pwat_val_p01,\n",
+    "    pwat_val_p02,\n",
+    "    pwat_val_p03,\n",
+    "    pwat_val_p04,\n",
+    "    pwat_val_c00,\n",
+    "    cape_val_c00,\n",
+    "    t2m_val_c00,\n",
+    "    cin_val_c00\n",
+    "    ]\n",
+    "\n",
+    "# we then stack 13 variables into 1 single 4D array\n",
+    "X_val_ensemble = np.stack((lst_val_ensemble), axis = -1)\n",
+    "\n",
+    "lst_test_ensemble = [\n",
+    "    apcp_test_p01,\n",
+    "    apcp_test_p02,\n",
+    "    apcp_test_p03,\n",
+    "    apcp_test_p04,\n",
+    "    apcp_test_c00,\n",
+    "    pwat_test_p01,\n",
+    "    pwat_test_p02,\n",
+    "    pwat_test_p03,\n",
+    "    pwat_test_p04,\n",
+    "    pwat_test_c00,\n",
+    "    cape_test_c00,\n",
+    "    t2m_test_c00,\n",
+    "    cin_test_c00\n",
+    "    ]\n",
+    "\n",
+    "# we then stack 13 variables into 1 single 4D array\n",
+    "X_test_ensemble = np.stack((lst_test_ensemble), axis = -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datapath = 'C:\\\\Users\\\\bobby\\\\Documents\\\\GitHub\\\\climateMedium\\\\postprocessed_data\\\\' # please change this to your own path\n",
+    "datapath = '../Data/Transitions/0. preprocessing/' # please change this to your own path\n",
     "np.save(datapath+'X_train_ensemble.npy', X_train_ensemble)\n",
     "np.save(datapath+'X_val_ensemble.npy', X_val_ensemble)\n",
     "np.save(datapath+'X_test_ensemble.npy', X_test_ensemble)"
@@ -335,7 +392,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('research')",
+   "display_name": "thesis_env",
    "language": "python",
    "name": "python3"
   },
@@ -349,14 +406,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.7"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "287ad1a523a1a0c79ba273026018d677ef26436c7e0e825f5e9b183804324b70"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
