upload (no data)

--- a/notebooks/classifying_GEFS_reanalysis.ipynb
+++ b/notebooks/classifying_GEFS_reanalysis.ipynb
@@ -204,38 +204,54 @@
     "quantile_75 = np.quantile(y_train.tp.values, 0.75)\n",
     "quantile_95 = np.quantile(y_train.tp.values, 0.95)\n",
     "\n",
+    "\n",
+    "# here we perform the binning of the precipitation data\n",
+    "# 0: below 50th percentile\n",
+    "# 1: between 50th and 75th percentile\n",
+    "# 2: between 75th and 95th percentile\n",
+    "# 3: above 95th percentile\n",
+    "# we then use these values as the target for the classification task\n",
     "y_train.tp.values= np.array(pd.cut(y_train.tp.values.reshape(-1),\n",
-    "                                bins=[-0.1,\n",
-    "                                quantile_50,\n",
-    "                                quantile_75,\n",
-    "                                quantile_95,\n",
-    "                                1.1],\n",
+    "                                bins=[\n",
+    "                                    -0.1,\n",
+    "                                    quantile_50,\n",
+    "                                    quantile_75,\n",
+    "                                    quantile_95,\n",
+    "                                    1.1\n",
+    "                                    ],\n",
     "                                labels=[0,1,2,3])).reshape(\n",
-    "                                y_train.tp.shape[0],\n",
-    "                                y_train.tp.shape[1],\n",
-    "                                y_train.tp.shape[2])\n",
+    "                                    y_train.tp.shape[0],\n",
+    "                                    y_train.tp.shape[1],\n",
+    "                                    y_train.tp.shape[2]\n",
+    "                                    )\n",
     "\n",
     "y_val.tp.values= np.array(pd.cut(y_val.tp.values.reshape(-1),\n",
-    "                                bins=[-0.1,\n",
-    "                                quantile_50,\n",
-    "                                quantile_75,\n",
-    "                                quantile_95,\n",
-    "                                1.1],\n",
-    "                                labels=[0,1,2,3])).reshape(\n",
-    "                                y_val.tp.shape[0],\n",
-    "                                y_val.tp.shape[1],\n",
-    "                                y_val.tp.shape[2])\n",
+    "                                 bins=[\n",
+    "                                     -0.1,\n",
+    "                                     quantile_50,\n",
+    "                                     quantile_75,\n",
+    "                                     quantile_95,\n",
+    "                                     1.1\n",
+    "                                     ],\n",
+    "                                 labels=[0,1,2,3])).reshape(\n",
+    "                                     y_val.tp.shape[0],\n",
+    "                                     y_val.tp.shape[1],\n",
+    "                                     y_val.tp.shape[2]\n",
+    "                                     )\n",
     "\n",
     "y_test.tp.values= np.array(pd.cut(y_test.tp.values.reshape(-1),\n",
-    "                                bins=[-0.1,\n",
-    "                                quantile_50,\n",
-    "                                quantile_75,\n",
-    "                                quantile_95,\n",
-    "                                1.1],\n",
+    "                                bins=[\n",
+    "                                    -0.1,\n",
+    "                                    quantile_50,\n",
+    "                                    quantile_75,\n",
+    "                                    quantile_95,\n",
+    "                                    1.1\n",
+    "                                    ],\n",
     "                                labels=[0,1,2,3])).reshape(\n",
-    "                                y_test.tp.shape[0],\n",
-    "                                y_test.tp.shape[1],\n",
-    "                                y_test.tp.shape[2])"
+    "                                    y_test.tp.shape[0],\n",
+    "                                    y_test.tp.shape[1],\n",
+    "                                    y_test.tp.shape[2]\n",
+    "                                    )"
    ]
   },
   {
@@ -255,18 +271,21 @@
    ],
    "source": [
     "# training FOR REANALYSIS CLASSIFICATION\n",
+    "# save the data for classification task\n",
     "y_class_train = y_train.tp.values\n",
     "y_class_train = y_class_train[..., np.newaxis]\n",
     "print(y_class_train.shape)\n",
     "np.save('../Data/Transitions/1. Classification Output/y_class_train.npy', y_class_train)\n",
     "\n",
     "# val\n",
+    "# save the data for classification task\n",
     "y_class_val = y_val.tp.values\n",
     "y_class_val = y_class_val[..., np.newaxis]\n",
     "print(y_class_val.shape)\n",
     "np.save('../Data/Transitions/1. Classification Output/y_class_val.npy', y_class_val)\n",
     "\n",
     "# testing\n",
+    "# save the data for classification task\n",
     "y_class_test = y_test.tp.values\n",
     "y_class_test = y_class_test[..., np.newaxis]\n",
     "print(y_class_test.shape)\n",
