--- a/notebooks/preprocessing_ens_GEFS.ipynb
+++ b/notebooks/preprocessing_ens_GEFS.ipynb
@@ -29,6 +29,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -86,12 +93,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Removing Duplicate time steps"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# selecting only unique values for apcp_p01, p02, p03, p04\n",
+    "# selecting only unique values for PWAT_p01, p02, p03, p04\n",
     "pwat_p01 = pwat_p01.sel(time=~pwat_p01.get_index(\"time\").duplicated())\n",
     "pwat_p02 = pwat_p02.sel(time=~pwat_p02.get_index(\"time\").duplicated())\n",
     "pwat_p03 = pwat_p03.sel(time=~pwat_p03.get_index(\"time\").duplicated())\n",
